--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
-    <string name="app_name">QuizApp</string>
+    <string name="app_name">Quiz-App</string>
+
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="password">Şifre</string>
+    <string name="e_mail">E-mail</string>
+    <string name="forget_password">Şifreni mi unuttun?</string>
 </resources>
