--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,13 @@
     <string name="password">Şifre</string>
     <string name="e_mail">E-mail</string>
     <string name="forget_password">Şifreni mi unuttun?</string>
+    <string name="add_question">SORU EKLE</string>
+    <string name="question">Soru</string>
+    <string name="enter_right_answer">Cevap 1</string>
+    <string name="other_answer2">Cevap 2</string>
+    <string name="other_answer3">Cevap 3</string>
+    <string name="other_answer4">Cevap 4</string>
+    <string name="btn_add">Ekle</string>
+    <string name="log_out">Çıkış yap</string>
+    <string name="ana_sayfa">Ana Sayfa</string>
 </resources>
